# furi

./: CMakeLists.txt  README.md  VSOpenFileFromDirFilters.json  dev.cmake
code/: CMakeLists.txt
code/furi/: cfuri.inl  common_query_view.hpp  furi.h  furi.hpp  path_view.hpp  string_view_wrap.hpp  uri.hpp  uri_view.hpp
code/furi/impl/: strutil.hpp
code/furi/util/: authority_split.hpp  common_query.hpp  common_query_iterator.hpp  path_iterator.hpp  sole_parts.hpp  split.hpp  strutil.hpp  visit_path.hpp
example/: CMakeLists.txt  decompose-cli.c
scratch/: CMakeLists.txt  scratch.cpp
test/: CMakeLists.txt  f-furi.c  t-authority_split.cpp  t-c_string_view.c  t-common_query_iterator.cpp  t-furi.c  t-furi.cpp  t-path_iterator.cpp  t-split.cpp
